src/objects/Zuora_Contact__c.object
<CustomObject>
    <description>Used to relate multiple contacts in Zuora to a single contact in Salesforce</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Zuora Contacts</relationshipLabel>
        <relationshipName>Zuora_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Test_Zuora_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>During Zuora onboarding and testing, we will be deleting test Zuora data in production. We do not want to delete contacts from real Switch leads, so this checkbox differentiates them</inlineHelpText>
        <label>Non-Test Zuora Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora_Id__c</fullName>
        <inlineHelpText>Set when the ZuoraAccountService creates this contact in Zuora</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Zuora Contact</label>
    <nameField>
        <displayFormat>ZC-{0000}</displayFormat>
        <label>Zuora Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zuora Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>